# multail

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: app.rs  log_parser.rs  main.rs  ui.rs
